# trading_bot

./: analyst.py  bot.py  config.py  main.py  pyproject.toml  strategy.py  sub.py
proto/: common_pb2.py  grpcConnection.py  instruments_pb2.py  instruments_pb2_grpc.py  sandbox.py  sandbox_pb2_grpc.py  stoporders_pb2.py
service/: grpcConnection.py  marketdata_pb2.py  operations_pb2.py  orders_pb2.py  sandbox.py  sandbox_pb2.py  sub.py  tgSend.py  users_pb2.py
